# Aurai

./: CMakeLists.txt  README.md  main.cpp
include/models/: AIModel.h  Admin.h  Client.h  LearningMaterial.h  Tutor.h  TutoringSession.h  User.h
include/services/: AIModelService.h  AuthService.h  ClientService.h  FileService.h  LearningMaterialService.h  ReportService.h  SessionService.h  TutorService.h
include/utils/: Exception.h  Logger.h  Menu.h  Validation.h
src/models/: AIModel.cpp  Admin.cpp  Client.cpp  Tutor.cpp  User.cpp
src/services/: AIModelService.cpp  AuthService.cpp  ClientService.cpp
src/utils/: Logger.cpp
